# serializer version: 1
# name: test_isd_file_metadata_table_content
  dict({
    'usaf_id': '690150',
    'wban_id': '93121',
    'year': '2006',
  })
# ---
# name: test_isd_file_metadata_table_count
  48113
# ---
# name: test_isd_station_metadata_table_content
  dict({
    'ba_climate_zone': 'Very Cold',
    'ca_climate_zone': None,
    'elevation': '+0032.5',
    'icao_code': 'PATO',
    'iecc_climate_zone': '7',
    'iecc_moisture_regime': None,
    'latitude': '+60.784',
    'longitude': '-148.848',
    'name': 'PORTAGE GLACIER',
    'quality': 'high',
    'recent_wban_id': '26492',
    'state': 'AK',
    'usaf_id': '700001',
    'wban_ids': '26492,99999',
  })
# ---
# name: test_isd_station_metadata_table_count
  4845
# ---
